--- a/app/src/main/res/layout/activity_data_user.xml
+++ b/app/src/main/res/layout/activity_data_user.xml
@@ -28,70 +28,54 @@
 
     <LinearLayout
         android:layout_width="409dp"
-        android:layout_height="438dp"
-        android:layout_marginTop="1dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingStart="20sp"
         android:paddingEnd="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgUser">
 
-        <EditText
+        <TextView
             android:id="@+id/etdUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="text"
-            android:text="Name" />
+            android:text="Username"
+            android:textSize="16sp" />
 
-        <EditText
-            android:id="@+id/editTextText2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10sp"
-            android:ems="10"
-            android:hint="Actualizar contraseña?"
-            android:inputType="text" />
+        <!-- Eliminado el campo de contraseña -->
 
-        <EditText
+        <TextView
             android:id="@+id/edtFulName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:ems="10"
-            android:hint="Nombre Completo"
-            android:inputType="text"
-            android:text="Name" />
+            android:text="Nombre Completo"
+            android:textSize="16sp" />
 
-        <EditText
+        <TextView
             android:id="@+id/edtTelefono"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:ems="10"
-            android:inputType="text"
-            android:text="Name" />
+            android:text="Teléfono"
+            android:textSize="16sp" />
 
-        <EditText
+        <TextView
             android:id="@+id/edtemail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="text"
-            android:text="Name" />
+            android:text="Email"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/txtFecha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:text="TextView"
+            android:text="Fecha de Inicio"
             android:textSize="20sp" />
 
         <TextView
@@ -99,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:text="TextView"
+            android:text="Fecha de Finalización"
             android:textSize="20sp" />
 
         <TextView
@@ -107,13 +91,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
-            android:text="TextView"
+            android:text="Membresía"
             android:textSize="20sp" />
 
-        <Button
-            android:id="@+id/button"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnCmanbiarDatos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5sp"
+                android:layout_weight="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5sp"
+                android:layout_weight="1"
+                android:text="Button" />
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
