--- a/app/src/main/res/layout/assistance_user.xml
+++ b/app/src/main/res/layout/assistance_user.xml
@@ -24,19 +24,19 @@
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
         android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/txtSalida"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
+        android:layout_marginBottom="4dp"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.16"
-        app:layout_constraintStart_toEndOf="@+id/txtEntrada"
-        tools:layout_editor_absoluteY="39dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/txtDuarcion"
@@ -44,6 +44,39 @@
         android:layout_height="wrap_content"
         android:layout_margin="10sp"
         android:text="TextView"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Entrada:"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salida:  "
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/txtSalida"
+        app:layout_constraintEnd_toStartOf="@+id/txtSalida"
+        app:layout_constraintTop_toTopOf="@+id/txtSalida" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="4dp"
+        android:text="Horas de Entrnamiento:"
+        app:layout_constraintBottom_toBottomOf="@+id/txtDuarcion"
+        app:layout_constraintEnd_toStartOf="@+id/txtDuarcion"
+        app:layout_constraintTop_toTopOf="@+id/txtDuarcion"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
