--- a/app/src/main/res/menu/user_data_menu.xml
+++ b/app/src/main/res/menu/user_data_menu.xml
@@ -7,4 +7,8 @@
         android:icon="@drawable/imgr"
         android:title="Item"
         app:showAsAction="always" />
+    <item
+        android:id="@+id/CerarSesion"
+        android:title="Cerrar sesion"
+        app:showAsAction="always" />
 </menu>
