--- a/app/src/main/res/layout/activity_change_data.xml
+++ b/app/src/main/res/layout/activity_change_data.xml
@@ -58,7 +58,7 @@
             android:text="Name" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnActData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Button" />
